--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-name: app_environment
-channels:
-  - snowflake
-dependencies:
-  - python=3.11.*
-  - snowflake-snowpark-python=
-  - streamlit=
+streamlit==1.31.0
+snowflake-snowpark-python[pandas]
+snowflake-connector-python
+pandas
+requests
